<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="642dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="-2dp"
        android:background="#fa2255"
        android:scaleType="centerCrop"
        android:src="@drawable/background1" />



    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/kek2"
                android:onClick="onClick"
                android:paddingStart="@dimen/padding_small2"
                android:text="@string/slovo1"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/kek2"
                android:onClick="onClick"
                android:paddingStart="@dimen/padding_small2"
                android:text="@string/slovo2"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/kek2"
                android:onClick="onClick"
                android:paddingStart="@dimen/padding_small2"
                android:text="@string/slovo3"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/kek2"
                android:onClick="onClick"
                android:paddingStart="@dimen/padding_small2"
                android:text="@string/slovo4"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/kek2"
                android:onClick="onClick"
                android:paddingStart="@dimen/padding_small2"
                android:text="@string/slovo5"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/kek2"
                android:onClick="onClick"
                android:paddingStart="@dimen/padding_small2"
                android:text="@string/slovo6"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/kek2"
                android:onClick="onClick"
                android:paddingStart="@dimen/padding_small2"
                android:text="@string/slovo7"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/kek2"
                android:onClick="onClick"
                android:paddingStart="@dimen/padding_small2"
                android:text="@string/slovo8"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/kek2"
                android:onClick="onClick"
                android:paddingStart="@dimen/padding_small2"
                android:text="@string/slovo9"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/kek2"
                android:onClick="onClick"
                android:paddingStart="@dimen/padding_small2"
                android:text="@string/slovo10"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/message_input"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#43A30C"
        android:clickable="false"
        android:gravity="center_vertical"
        android:text="Разговорник"
        android:paddingLeft="60dp"
        android:textColor="@android:color/white"
        android:textSize="18dp" />
    <ImageView
        android:id="@+id/Button_back"
        android:layout_width="34dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#0000"
        android:onClick="goBack"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/arrow" />

</RelativeLayout>